--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,5 @@ rvm:
 script:
   - ruby ./VMTranslator.rb ./StackArithmetic/StackTest/StackTest.vm > ./StackArithmetic/StackTest/StackTest.asm
   - ./tools/CPUEmulator.sh ./StackArithmetic/StackTest/StackTest.tst
+  - ruby ./VMTranslator.rb ./ProgramFlow/BasicLoop/BasicLoop.vm > ./ProgramFlow/BasicLoop/BasicLoop.asm
+  - ./tools/CPUEmulator.sh ./ProgramFlow/BasicLoop/BasicLoop.tst
