--- a/.travis.yml
+++ b/.travis.yml
@@ -10,3 +10,5 @@ script:
   - ./tools/CPUEmulator.sh ./StackArithmetic/StackTest/StackTest.tst
   - ruby ./VMTranslator.rb ./ProgramFlow/BasicLoop/BasicLoop.vm > ./ProgramFlow/BasicLoop/BasicLoop.asm
   - ./tools/CPUEmulator.sh ./ProgramFlow/BasicLoop/BasicLoop.tst
+  - ruby ./VMTranslator.rb ./ProgramFlow/FibonacciSeries/FibonacciSeries.vm > ./ProgramFlow/FibonacciSeries/FibonacciSeries.asm
+  - ./tools/CPUEmulator.sh ./ProgramFlow/FibonacciSeries/FibonacciSeries.tst
