Add static access

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,3 +12,5 @@ script:
   - ./tools/CPUEmulator.sh ./ProgramFlow/BasicLoop/BasicLoop.tst
   - ruby ./VMTranslator.rb ./ProgramFlow/FibonacciSeries/FibonacciSeries.vm > ./ProgramFlow/FibonacciSeries/FibonacciSeries.asm
   - ./tools/CPUEmulator.sh ./ProgramFlow/FibonacciSeries/FibonacciSeries.tst
+  - ruby ./VMTranslator.rb ./MemoryAccess/StaticTest/StaticTest.vm > ./MemoryAccess/StaticTest/StaticTest.asm
+  - ./tools/CPUEmulator.sh ./MemoryAccess/StaticTest/StaticTest.tst
