--- a/.travis.yml
+++ b/.travis.yml
@@ -14,3 +14,5 @@ script:
   - ./tools/CPUEmulator.sh ./ProgramFlow/FibonacciSeries/FibonacciSeries.tst
   - ruby ./VMTranslator.rb ./MemoryAccess/StaticTest/StaticTest.vm > ./MemoryAccess/StaticTest/StaticTest.asm
   - ./tools/CPUEmulator.sh ./MemoryAccess/StaticTest/StaticTest.tst
+  - ruby ./VMTranslator.rb ./FunctionCalls/SimpleFunction/SimpleFunction.vm > ./FunctionCalls/SimpleFunction/SimpleFunction.asm
+  - ./tools/CPUEmulator.sh ./FunctionCalls/SimpleFunction/SimpleFunction.tst
