Translate a directory at a time

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,13 +6,13 @@ rvm:
   - 2.4.0
 
 script:
-  - ruby ./VMTranslator.rb ./StackArithmetic/StackTest/StackTest.vm > ./StackArithmetic/StackTest/StackTest.asm
+  - ruby ./VMTranslator.rb ./StackArithmetic/StackTest/ > ./StackArithmetic/StackTest/StackTest.asm
   - ./tools/CPUEmulator.sh ./StackArithmetic/StackTest/StackTest.tst
-  - ruby ./VMTranslator.rb ./ProgramFlow/BasicLoop/BasicLoop.vm > ./ProgramFlow/BasicLoop/BasicLoop.asm
+  - ruby ./VMTranslator.rb ./ProgramFlow/BasicLoop/ > ./ProgramFlow/BasicLoop/BasicLoop.asm
   - ./tools/CPUEmulator.sh ./ProgramFlow/BasicLoop/BasicLoop.tst
-  - ruby ./VMTranslator.rb ./ProgramFlow/FibonacciSeries/FibonacciSeries.vm > ./ProgramFlow/FibonacciSeries/FibonacciSeries.asm
+  - ruby ./VMTranslator.rb ./ProgramFlow/FibonacciSeries/ > ./ProgramFlow/FibonacciSeries/FibonacciSeries.asm
   - ./tools/CPUEmulator.sh ./ProgramFlow/FibonacciSeries/FibonacciSeries.tst
-  - ruby ./VMTranslator.rb ./MemoryAccess/StaticTest/StaticTest.vm > ./MemoryAccess/StaticTest/StaticTest.asm
+  - ruby ./VMTranslator.rb ./MemoryAccess/StaticTest/ > ./MemoryAccess/StaticTest/StaticTest.asm
   - ./tools/CPUEmulator.sh ./MemoryAccess/StaticTest/StaticTest.tst
-  - ruby ./VMTranslator.rb ./FunctionCalls/SimpleFunction/SimpleFunction.vm > ./FunctionCalls/SimpleFunction/SimpleFunction.asm
+  - ruby ./VMTranslator.rb ./FunctionCalls/SimpleFunction/ > ./FunctionCalls/SimpleFunction/SimpleFunction.asm
   - ./tools/CPUEmulator.sh ./FunctionCalls/SimpleFunction/SimpleFunction.tst
